  overwritten (#751).

New features:

- Added `descriptions` and `units` attributes to dataset objects, exposing
  the descriptions and units of dataset bands (#850, #851).
- Creation of a `Window` class to abstract Rasterio's window selection
  tuples (#759).
- Performance of `reproject()` has been increased by using an approximate
  transformer as with gdal_translate (#569).

Bug fixes:

- `rasterize()` now checks that the `out_shape` is 2D before continuing (#847).
- Named AWS credential profiles are now properly set up up in the main CLI
  command's environment (#838).

Refactoring:

- In the CLI, a GDAL environment is now configured by the top level command
  and then passed in a Click context to subcommands (#841).
- Removal of redundant copies of GDAL geotransform detection code (#828).
- Window methods of dataset objects have been extracted into functions of
  a new `rasterio.windows` module (#803).

Known bugs:

- `warp.project()` and rio-warp may lose one or more columns of data when 
  resampling to lower resolution (#853).

0.36.0 (2016-06-14)
-------------------

Bug fixes:

- rio-merge now copies colormaps to output files (#774, #778).
- The correct `--force-overwrite` and `--output` usage is now provided in the
  case of a `FileOverwriteError` (#750).
- Passing undefined CRS to `reproject` no longer causes a segfault (#749).
- GDAL's invert projection check is always used by default in reprojecting
  (#780).
- Forward slashes are always used for GDAL VSI paths (`/vsizip/` etc) instead
  of `os.path.sep` (#754, #789).

Documentation:

- Contributing guidelines have been added (#701).
- Axis order has been corrected in image processing doc (#700).
- A framework for comprehensive documentaton has been created (#713, #723,
  #729, #737, #738, #739, #740, #748, #756, #760).

New features:

- `--src-nodata` and `--dst-nodata` options for rio-warp (#746).
- `read()` and `read_masks()` take an `out_shape` argument for decimated reads
  (#761).